# backend

./: .env  .env.example  Dockerfile  README_BACKEND.md  TEST_REPORT_BACKEND.md  airplane.db  pyproject.toml
data/: airport_data.json
src/: database.py  dependencies.py  main.py
src/models/: __init__.py  airplane.py  airport_city.py  cabin_class.py  cabin_template.py  flight.py  passenger.py  seat.py  ticket.py  user.py  user_details.py
src/repositories/: airplane.py  airport_city.py  base.py  cabin_class.py  cabin_template.py  flight.py  passenger.py  seat.py  ticket.py  user.py  user_details.py
src/routes/: airplane.py  auth.py  city.py  data_file.py  flight.py  passenger.py  seat.py  ticket.py  user.py  user_details.py
src/routes/admin/: airplane.py  cabin_template.py  city.py  flight.py  seat.py  ticket.py  user.py
src/schemas/: airplane.py  airport_city.py  auth.py  cabin_class.py  cabin_template.py  common.py  flight.py  passenger.py  seat.py  ticket.py  user.py  user_details.py
src/services/: airplane.py  auth.py  cabin_template.py  data_file.py  email.py  flight.py  seat.py  ticket.py  ticket_pdf.py  user.py  user_details.py
